--- a/notebook/EDA_file.ipynb
+++ b/notebook/EDA_file.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -112,13 +112,13 @@
        "1               completed          69             90             88  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data/stud.csv\")\n",
+    "df = pd.read_csv(\"data\\stud.csv\")\n",
     "df.head(2)"
    ]
   },
